# sayaslicer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
.github/workflows/: main.yml
include/: ImGuiNotify.hpp
include/fonts/: fa_solid_900.hpp  roboto_medium.hpp
include/midifile/: CMakeLists.txt
lang/: cn.json  en.json  es.json  jp.json  kr.json
sayaslicer/: CMakeLists.txt  about.cpp  about.hpp  audio.cpp  audio.hpp  base_convert.cpp  base_convert.hpp  bmseclipboard.cpp  bmseclipboard.hpp  console.cpp  console.hpp  copy_paste.cpp  copy_paste.hpp  custom_widgets.cpp  custom_widgets.hpp  dropmanager.hpp  history.cpp  history.hpp  markdown.cpp  markdown.hpp  marker.cpp  marker.hpp  midi.cpp  midi.hpp  notifications.hpp  preferences.cpp  preferences.hpp  project.cpp  project.hpp  sayaslicer.cpp  sayaslicer.h  sayaslicer.hpp  selection.cpp  selection.hpp  settings.hpp  sound_buffer.cpp  sound_buffer.hpp  texture.hpp  theme.cpp  theme.hpp  (+6 more)
scripts/: CheckGIt.cmake
